--- a/src/1-Intro/1-2_machine-learning/1-2_ml.tex
+++ b/src/1-Intro/1-2_machine-learning/1-2_ml.tex
@@ -1,6 +1,7 @@
-A significant limitation of traditional image processing and filtering methods has been the necessity to manually create and fine-tune filters for feature extraction.
-Although this approach provides researchers with considerable control over filtering techniques, it tends to be time-consuming and challenging to generalize across diverse datasets.
-Deep learning and neural networks, however, offer algorithms where feature extraction is automated, introducing techniques that enhance the robustness of these algorithms to novel datasets.
+A notable challenge associated with conventional image processing and filtering techniques is the requirement for manual development and adjustment of filters aimed at feature extraction.
+While this manual approach grants researchers substantial control over the filtering process, it is often labor-intensive and difficult to apply broadly across various datasets.
+In contrast, deep learning and neural networks present methodologies wherein feature extraction is automated.
+This advancement introduces a level of adaptability and robustness in these algorithms, making them more effective in handling novel datasets.
 
 \input{src/1-Intro/1-2_machine-learning/nn-telos.tex}
 \input{src/1-Intro/1-2_machine-learning/neural-network-structure.tex}
