--- a/src/1-Intro/1-2_machine-learning/nn-telos.tex
+++ b/src/1-Intro/1-2_machine-learning/nn-telos.tex
@@ -1,10 +1,10 @@
 \subsection{The Purpose of Neural Networks for Image Processing}
 
-Neural networks in image processing aim to emulate the visual system of animals (\cref{fig:nn-purpose-zebra}), creating algorithmic analogies to the physical neuronal pathways used in visual perception.
-In the human brain, many aspects of our visual system, such as the ability to interpret images regardless of their orientation and extrapolate from known information, are often taken for granted.
-However, replicating these capabilities algorithmically poses significant challenges.
-Neural networks alleviate the need for manual feature selection, which has been a limitation of traditional image processing methods.
-This automation not only simplifies the process but also enhances the ability of these systems to interpret and process images in ways similar to the human brain, making neural networks a powerful tool in the realm of image processing.
+The purpose of utilizing neural networks in image processing is to algorithmically emulate the visual perception system found in animals (\cref{fig:nn-purpose-zebra}), specifically creating computational analogies to the physical neuronal pathways involved in visual processing.
+It is often taken for granted that the human brain seamlessly interprets images regardless of orientation and extrapolates information from visual data. However, algorithmically replicating such innate capabilities has posed substantial challenges.
+A key benefit of neural networks is the minimization of manual feature selection, which has traditionally constrained image processing methods.
+By automating feature selection, neural networks can not only simplify image analysis procedures, but also enhance the capacity of these systems to computationally process and interpret images akin to the capabilities of the human brain.
+Thus, neural networks represent an important advancement for the field of image processing.
 
 
 \begin{figure}[h!]
