Historic methods revised wording

--- a/src/1-Intro/1-1_computer-vision-primer/image-similarity-metrics.tex
+++ b/src/1-Intro/1-1_computer-vision-primer/image-similarity-metrics.tex
@@ -19,7 +19,7 @@ In Equation \cref{eq:p-norm}, $A$ and $B$ are the two images being compared, $w$
 
 While p-norm measures are conceptually straightforward to apply, their primary drawback is the absence of spatial information.
 For instance, an image that has been altered by a linear transformation might not achieve a favorable score using a p-norm, even though the two images differ only by a minor shift, scale, or rotation.
-To mitigate this limitation, cross-correlation, or the sliding dot product between images, can be employed​​​ \cite{bendatRandomDataAnalysis2010,hannahComputerMatchingAreas1977} (\cref{eq:xcorr}).
+To mitigate this limitation, cross-correlation, or the sliding dot product between images, can be employed \cite{bendatRandomDataAnalysis2010,hannahComputerMatchingAreas1977} (\cref{eq:xcorr}).
 This technique, when combined with projective geometry, aids in identifying regions of interest within a model-based registration framework.
 
 \begin{equation}
