Renamed JTML paper

--- a/src/1-Intro/1-2_machine-learning/neural-network-structure.tex
+++ b/src/1-Intro/1-2_machine-learning/neural-network-structure.tex
@@ -75,7 +75,7 @@ Different neural network architectures have been created that employ standard im
 
 \subsubsection{Convolutional neural networks}
 
-Alex Krizhevsky significantly renewed interest in deep learning in 2012 by employing a convolutional neural network to win the ImageNet challenge. \cite{russakovskyImageNetLargeScale2015} by more than 10 points over second place.
+Alex Krizhevsky significantly renewed interest in deep learning in 2012 by employing a convolutional neural network to win the ImageNet challenge \cite{russakovskyImageNetLargeScale2015} by more than 10 points over second place.
 Since then, neural networks have found their way into many different computer vision tasks, including those in the medical field.
 The power of convolutional neural networks lay in their ability to autonomously extract latent features from images useful for many processing and analysis tasks.
 The medical field has used them to segment and classify different bones, structures, and pathologies from a wide array of imaging modalities (CT, x-ray, MRI, etc).
