--- a/src/2-aims/2-aims.tex
+++ b/src/2-aims/2-aims.tex
@@ -1,7 +1,7 @@
 \chapter{The Aims of this Dissertation}
 \label{sec:aims}
 
-\section{Aim 1: JointTrack Machine Learning: An Autonomous Method of Measuring 6-DOF TKA Kinematics from Single-Plane Fluoroscopic Images}
+\section{Aim 1: Joint Track Machine Learning: An Autonomous Method of Measuring Total Knee Arthroplasty Kinematics From Single-Plane X-Ray Images}
 \label{sec:aim1}
 \input{src/2-aims/aim1.tex}
 
