--- a/src/JTML/chX-jtml.tex
+++ b/src/JTML/chX-jtml.tex
@@ -1,4 +1,4 @@
-\chapter{JointTrack Machine Learning: An Autonomous Method of Measuring 6-DOF TKA Kinematics from Single-Plane Fluoroscopic Images}{\renewcommand*{\thefootnote}{\fnsymbol{footnote}}\footnotetext{Reprinted with permission from the Journal of Arthroplasty \cite{jensenJointTrackMachine2023}}
+\chapter{Joint Track Machine Learning: An Autonomous Method of Measuring Total Knee Arthroplasty Kinematics From Single-Plane X-Ray Images}{\renewcommand*{\thefootnote}{\fnsymbol{footnote}}\footnotetext{Reprinted with permission from the Journal of Arthroplasty \cite{jensenJointTrackMachine2023}}
 
 
 \label{sec:jtml}
